created site plan for dz games

--- a/index.html
+++ b/index.html
@@ -24,9 +24,28 @@
                 <div class="container">
                     <h3>Team02 Website</h3>
                     <p>
+                        Repo: <a href="https://github.com/DicmaryZambrano">https://github.com/DicmaryZambrano</a>
+                        Trello: <a href="https://trello.com/">https://trello.com/</a>
+                        Website: <a href="#">website</a>
+                        SitePlan: <a href="#">siteplan</a>
+                    </p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="container">
+                    <h3>Team02 Website</h3>
+                    <p>
                         Repo: <a href="https://github.com/DicmaryZambrano/Team02-Sleep-Outside">https://github.com/DicmaryZambrano/Team02-Sleep-Outside</a>
                         Trello: <a href="https://trello.com/b/LcvMIF0N/team02">https://trello.com/b/LcvMIF0N/team02</a>
                         Website: <a href="https://team02sleepoutside.netlify.app">https://team02sleepoutside.netlify.app</a>
+                    </p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="container">
+                    <h3>Animation Practice</h3>
+                    <p>
+                        Website: <a href="/W04/src/index.html">Css Animation</a>
                     </p>
                 </div>
             </div>
