added new projects

--- a/index.html
+++ b/index.html
@@ -1,58 +1,81 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dicmary Web Projects</title>
-    <meta name="author" content="Dicmary Zambrano">
-    <meta name="description" content="Dicmary Web Projects">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Dicmary Web Projects">
-    <meta property="og:type" content="website">
-</head>
+    <meta name="author" content="Dicmary Zambrano" />
+    <meta name="description" content="Dicmary Web Projects" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter&family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="images/favicon.ico" />
+    <meta property="og:title" content="Dicmary Web Projects" />
+    <meta property="og:type" content="website" />
+  </head>
 
-<body>
+  <body>
     <main id="home">
-        <h1>Dicmary Projects</h1>
-        <section class="projects">
-            <div class="project">
-                <div class="container">
-                    <h3>Team02 Website</h3>
-                    <p>
-                        Repo: <a href="https://github.com/DicmaryZambrano">https://github.com/DicmaryZambrano</a>
-                        Trello: <a href="https://trello.com/">https://trello.com/</a>
-                        Website: <a href="#">website</a>
-                        SitePlan: <a href="#">siteplan</a>
-                    </p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="container">
-                    <h3>Team02 Website</h3>
-                    <p>
-                        Repo: <a href="https://github.com/DicmaryZambrano/Team02-Sleep-Outside">https://github.com/DicmaryZambrano/Team02-Sleep-Outside</a>
-                        Trello: <a href="https://trello.com/b/LcvMIF0N/team02">https://trello.com/b/LcvMIF0N/team02</a>
-                        Website: <a href="https://team02sleepoutside.netlify.app">https://team02sleepoutside.netlify.app</a>
-                    </p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="container">
-                    <h3>Animation Practice</h3>
-                    <p>
-                        Website: <a href="/W04/src/index.html">Css Animation</a>
-                    </p>
-                </div>
-            </div>
-        </section>
+      <h1>Dicmary Projects</h1>
+      <section class="projects">
+        <div class="project">
+          <div class="container">
+            <h3>Team02 Website</h3>
+            <p>
+              Repo:
+              <a href="https://github.com/DicmaryZambrano"
+                >https://github.com/DicmaryZambrano</a
+              >
+              Trello:
+              <a href="https://trello.com/b/LcvMIF0N/team02"
+                >https://trello.com/b/LcvMIF0N/team02</a
+              >
+              Website:
+              <a href="https://team02sleepoutside.netlify.app"
+                >https://team02sleepoutside.netlify.app</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <div class="container">
+            <h3>DZ Game Gallery Site Plan Website</h3>
+            <p>
+              Repo:
+              <a
+                href="https://github.com/DicmaryZambrano/DZ-Games-Gallery-Siteplan "
+                >https://github.com/DicmaryZambrano/DZ-Games-Gallery-Siteplan
+              </a>
+              Trello:
+              <a href="https://trello.com/b/opDM52xj/dz-games-scheduale "
+                >https://trello.com/b/opDM52xj/dz-games-scheduale
+              </a>
+              Website:
+              <a href="https://dz-game-gallery-siteplant.netlify.app "
+                >https://dz-game-gallery-siteplant.netlify.app
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <div class="container">
+            <h3>Animation Practice</h3>
+            <p>Website: <a href="W04/src/index.html">Css Animation</a></p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-          <p>&copy; <span id="year"></span> - Web Projects - Dicmary Zambrano Venezuela <span id="lastModified"></span> </p>
+      <p>
+        &copy; <span id="year"></span> - Web Projects - Dicmary Zambrano
+        Venezuela <span id="lastModified"></span>
+      </p>
     </footer>
     <script src="scripts/main.js"></script>
+  </body>
 </html>
